# bridget

./: .gitignore  pyproject.toml  test.py
bridget/: __init__.py  __main__.py  chatifier.py  discord2se.py  discordifier.py  models.py  se2discord.py  shlink.py  util.py
