[tool.poetry]
name = "bridget"
version = "0.1.0"
description = ""
authors = ["Ginger <75683114+gingershaped@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
sechat = {git = "https://github.com/gingershaped/sechat", rev = "v3"}
"discord.py" = "^2.3.2"
bs4 = "^0.0.2"
markdownify = "^1.2.0"
odmantic = "^1.0.2"
discord-markdown-ast-parser = "^1.0.6"
lxml = "^6.0.0"
motor = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
